application spacing fix

--- a/ClientApp/src/app/shared/applications/applications.component.scss
+++ b/ClientApp/src/app/shared/applications/applications.component.scss
@@ -11,11 +11,11 @@
 }
 
 .app-list {
-  width: 30%;
+  width: 33%;
 }
 
 .current-app {
-  width: 60%;
+  width: 65%;
 }
 
 .app-row {
